test/good/classes/cmp02.px

class A def
    n: Int


a = [A(i) for i in 0..4]
for x in a do
    if x == a[2] do
        print x.n
