test/bad/classes/struct01.px

class Struct def
    Int n

r = Struct(0)
print r.x
